@@ -1,3 +1,6 @@
+25. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
+	- window title on borrow dialog fixed
+
 23. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
 	- regression on saving thumbnail data to catalog file fixed
 	- dont add history item on save/save as if already in list
